[package]
name = "fnv"
version = "1.0.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "Fowler–Noll–Vo hash function"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/servo/rust-fnv"
documentation = "https://doc.servo.org/fnv/"
categories = ["algorithms", "data-structures"]
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "fnv"
path = "lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
const-primes = "0.8.7"
const-random = "0.1.18"
